[package]
name = "konsole"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
enable-ansi-support = "0.2.1"
lazy_static = "1.4.0"
terminal_size = "0.3.0"

[target."cfg(windows)".dependencies]
libc = "0.2"

[target."cfg(unix)".dependencies]
termios = "0.3.3"
signal-hook = "0.3.17"